Fixed footer font size on mobile

--- a/src/sass/_media-queries.scss
+++ b/src/sass/_media-queries.scss
@@ -118,6 +118,9 @@
     margin-bottom: 10px;
     font-size: 16px;
   }
+  .site-footer{
+    font-size: 18px;
+  }
 
   // .hero-wrap
   .hero-wrap{
